Download movies and video format check
- Now the name of the selected movie is displayed.
- Movie direct download link added below of selected movie.
- Incompatible video formats checking added. If not compatible video format found, a message is shown to user.
- Code reduction and subtle improvements with project structure.

--- a/config.ini
+++ b/config.ini
@@ -2,3 +2,4 @@
 MOVIES_FOLDER = '../../routeToYourMoviesFolder'
 INDEX_TITLE = 'Movies interface'
 BUTTON_TO_RELOAD_MOVIES_LIST_TEXT = 'Back to movies list.'
+DOWNLOAD_MOVIE_TEXT = 'Click here to donwload this movie'
