Search system bug fixes

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [ENVIROMENT]
 MOVIES_FOLDER = './movies'
 INDEX_TITLE = 'Movies Interface'
-BUTTON_TO_RELOAD_MOVIES_LIST_TEXT = 'Back to movies list.'
+BUTTON_TO_RELOAD_MOVIES_LIST_TEXT = 'Back to movies list'
 DOWNLOAD_MOVIE_TEXT = 'Click here to donwload this movie'
