UI enhancements update
Grammar and orthography mistakes fixed
/app/Movie.php file deleted and content added to /app/index.php
Multiple bad naming on variables and functions updates to more properly ones
Tile texture patter of background updated. Old one removed
Style for watching movie screen created

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
-[ENVIROMENT]
+[ENVIRONMENT]
 MOVIES_FOLDER = './movies'
 INDEX_TITLE = 'Movies Interface'
-BUTTON_TO_RELOAD_MOVIES_LIST_TEXT = 'Back to movies list'
-DOWNLOAD_MOVIE_TEXT = 'Click here to donwload this movie'
+BUTTON_TO_RELOAD_MOVIES_LIST_TEXT = 'Back to list of movies'
+DOWNLOAD_MOVIE_TEXT = 'Click here to download this movie'
